--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,25 @@
       <artifactId>[the artifact id of the block to be mounted]</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency-->
+      <dependency>
+          <groupId>net.wimpi</groupId>
+          <artifactId>jamod</artifactId>
+          <version>1.2</version>
+      </dependency>
+
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
+
+      <dependency>
+          <groupId>commons-lang</groupId>
+          <artifactId>commons-lang</artifactId>
+          <version>2.3</version>
+      </dependency>
+
+
   </dependencies>
 
 </project>
